Bug 137523 - Part of the footer of the first page is not shown at doc opening even is visible at save
Summary: Part of the footer of the first page is not shown at doc opening even is visi...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.1 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Header-Footer
  Show dependency treegraph
 
Reported: 2020-10-16 09:46 UTC by Lorenzo Buzzi
Modified: 2023-09-26 11:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A document on which the issue can be observed. (48.42 KB, application/vnd.oasis.opendocument.text)
2020-10-16 09:50 UTC, Lorenzo Buzzi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lorenzo Buzzi 2020-10-16 09:46:35 UTC
Description:
The footer of the document contains a small table followed by 3 lines of text.
Is is the same on all the pages (the option 'Same content on first page' is enabled).
The document is saved and at save time the 3 lines below the table are visible (on all the pages). Then de document is closed.
At reopening the 3 lines below the footer table in the first page are not visible any more (but the space needed for them is preserved). This happens only on the first page.
In order to make them visible, I have to open the 'Format footer' dialog and simply click 'Apply'.
Once saved and closed, at reopening the 3 lines are still not visible.

Steps to Reproduce:
1. Create a new document with more than one page
2. Add a footer
3. Write a line of text in the footer
4. Add a table (2x2) in the footer, above the line of text
5. (optional) Write some text in the table cells
6. Save the document
7. Close the document
8. Open the document

Actual Results:
The line of text in the footer below the table is not visible.

Expected Results:
The line of text in the footer below the table should be visible as it was at the time the document has been saved.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Used font Myriad Pro, size 11.
Comment 1 Lorenzo Buzzi 2020-10-16 09:47:45 UTC
Same issue with 7.0.2 on Windows 7 (x86-64).
Comment 2 Lorenzo Buzzi 2020-10-16 09:50:36 UTC
Created attachment 166408 [details]
A document on which the issue can be observed.

The document on which I discovered the issue.
Comment 3 Mike Kaganski 2020-10-16 10:09:27 UTC
Repro with Version: 7.1.0.0.alpha0+ (x64)
Build ID: b12b1663d135f94eb56f3c1f852ef008e87c4e5f
CPU threads: 12; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

OK in Version: 6.2.0.3 (x64)
Build ID: 98c6a8a1c6c7b144ce3cc729e34964b47ce25d62
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL
Comment 4 Lorenzo Buzzi 2020-10-16 12:57:16 UTC
Repro with Version: 6.2.8.2 (x64)
Build ID: f82ddfca21ebc1e222a662a32b25c0c9d20169ee
Thread CPU: 8; SO: Windows 10.0; UI render: GL; VCL: win;
Locale: it-IT (it_IT); UI: it-IT
Calc: threaded
Comment 5 Mike Kaganski 2020-10-16 13:58:40 UTC
Regression after https://git.libreoffice.org/core/+/cc5916cd314a27b0cc99560ab887480026630a95
Comment 6 Justin L 2021-11-08 09:38:32 UTC
(In reply to Mike Kaganski from comment #5)
> Regression after
> https://git.libreoffice.org/core/+/cc5916cd314a27b0cc99560ab887480026630a95

That is author Michael Stahl on Thu May 09 10:53:11 2019 (LO 6.2.4)
    tdf#124675 sw: fix crash when moving SwTextFrame in table to prev page
Comment 7 Gabor Kelemen (Collabora) 2022-02-10 10:12:02 UTC
Magic words for search:

Adding CC: to Michael Stahl
Comment 8 Commit Notification 2023-08-22 09:27:49 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/027f8328eef1e149b6c99b478ed5df870291dc2d

tdf#137523 sw: layout: fix text below tables in footer

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Stahl 2023-08-22 09:30:09 UTC
fixed on master
Comment 10 Commit Notification 2023-08-22 19:01:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b453cd8dad4580e0c2f7be358b3173ad7837fea3

tdf#137523 sw: layout: fix text below tables in footer

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-08-24 10:43:57 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/492ddef596c99a9c24d2778276025aafc612a7cb

tdf#137523 sw: layout: fix text below tables in footer differently

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-09-26 11:37:35 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/fbf070f38d25de29de3b8d7192e96cb957852965

tdf#137523 sw: layout: fix text below tables in footer differently

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.